--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -73,11 +73,11 @@
                     android:padding="10dp"
                     android:src="@drawable/minus"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/qty"
+                    app:layout_constraintEnd_toStartOf="@+id/tvQty"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/qty"
+                    android:id="@+id/tvQty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_bold"
@@ -99,7 +99,7 @@
                     android:padding="10dp"
                     android:src="@drawable/plus"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/qty"
+                    app:layout_constraintStart_toEndOf="@+id/tvQty"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -116,7 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_bold"
-                    android:text="$ "
+                    android:text="$"
                     android:textColor="@color/primary"
                     android:textSize="22sp"
                     android:textStyle="bold" />
