--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -51,24 +51,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/txtAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_weight="8"
-                android:background="@drawable/custom_input"
-                android:drawableLeft="@drawable/ic_location"
-                android:drawablePadding="5dp"
-                android:fontFamily="@font/nunito_bold"
-                android:hint="Address"
-                android:padding="10dp"
-                android:textSize="15sp" />
+            <!--            <EditText-->
+            <!--                android:id="@+id/txtAddress"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_gravity="end"-->
+            <!--                android:layout_weight="8"-->
+            <!--                android:background="@drawable/custom_input"-->
+            <!--                android:drawableLeft="@drawable/ic_location"-->
+            <!--                android:drawablePadding="5dp"-->
+            <!--                android:fontFamily="@font/nunito_bold"-->
+            <!--                android:hint="Address"-->
+            <!--                android:padding="10dp"-->
+            <!--                android:textSize="15sp" />-->
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/recyclerviewCategory">
 
                 <TextView
@@ -173,58 +172,58 @@
             android:text="CheckOut"
             android:textSize="16sp"
             app:cornerRadius="15dp" />
+    </LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/emptyCart"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+    <LinearLayout
+        android:id="@+id/emptyCart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_cart"
+            app:tint="#DBDBDC" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/nunito_bold"
+            android:text="Your Cart is Empty"
+            android:textColor="@color/primary"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/nunito_bold"
             android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:text="Looks like you haven't added \n anything to your cart yet"
+            android:textColor="@color/text_color2"
+            android:textSize="16sp" />
 
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src="@drawable/ic_cart"
-                app:tint="#DBDBDC" />
+        <Button
+            android:id="@+id/btnAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/nunito_bold"
+            android:paddingHorizontal="25dp"
+            android:paddingVertical="10dp"
+            android:text="Add Now"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:cornerRadius="100dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/nunito_bold"
-                android:text="Your Cart is Empty"
-                android:textColor="@color/primary"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:fontFamily="@font/nunito_bold"
-                android:gravity="center"
-                android:text="Looks like you haven't added \n anything to your cart yet"
-                android:textColor="@color/text_color2"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/btnAdd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:fontFamily="@font/nunito_bold"
-                android:paddingHorizontal="25dp"
-                android:paddingVertical="10dp"
-                android:text="Add Now"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:cornerRadius="100dp" />
-
-        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
