--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -17,7 +17,6 @@
             android:id="@+id/cartImg"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:background="@color/main_background"
             android:src="@drawable/logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +138,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunito_bold"
-                android:text="₹ "
+                android:text="$"
                 android:textColor="@color/primary"
                 android:textSize="18sp"
                 android:textStyle="bold" />
