--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,8 +40,7 @@
                 android:background="@drawable/custom_input"
                 android:fontFamily="@font/nunito_bold"
                 android:hint="Username"
-                android:inputType="textEmailAddress"
-                android:text="donero" />
+                android:inputType="textEmailAddress" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -59,8 +58,7 @@
                     android:fontFamily="@font/nunito_bold"
                     android:hint="Password"
                     android:inputType="textPassword"
-                    android:padding="0dp"
-                    android:text="ewedon" />
+                    android:padding="0dp" />
 
                 <ImageView
                     android:id="@+id/showPassword"
