--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/cartfoodTitle"
+            android:id="@+id/cartitemTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
@@ -54,25 +54,6 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_delete" />
-
-            <!--            <TextView-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:fontFamily="@font/nunito_bold"-->
-            <!--                android:text="₹ "-->
-            <!--                android:textColor="@color/text_color"-->
-            <!--                android:textSize="16sp"-->
-            <!--                android:textStyle="bold" />-->
-
-            <!--            <TextView-->
-            <!--                android:id="@+id/singlePrice"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:fontFamily="@font/nunito_bold"-->
-            <!--                android:text="0"-->
-            <!--                android:textColor="@color/text_color"-->
-            <!--                android:textSize="16sp"-->
-            <!--                android:textStyle="bold" />-->
 
         </LinearLayout>
 
@@ -144,7 +125,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/cartfoodPrice"
+                android:id="@+id/cartitemPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nunito_bold"
